--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "quasar": "^1.0.0-beta.0",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vue-image-upload-resize": "^2.0.4"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0-beta.0",
