--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -1,26 +1,15 @@
 {
   "@quasar/icon-genie": {
-    "minify_dev": "pngcrush",
-    "minify_build": "pngcrush",
+    "minify_dev": "pngquant",
+    "minify_build": "pngquant",
     "cordova": {
       "background_color": "#000074",
       "splashscreen_type": "pure"
     },
-    "build_always": true,
+    "build_always": false,
     "__internal": {
-      "dev": {
-        "spa": {
-          "iconHash": "2e525d7615dea2d57f0f5011a7605018"
-        }
-      },
-      "build": {
-        "cordova": {
-          "iconHash": "2e525d7615dea2d57f0f5011a7605018",
-          "splashscreenHash": "5385786e15091418c210d5da2c99aed2",
-          "splashscreenType": "pure",
-          "backgroundColor": "#000074"
-        }
-      }
+      "dev": {},
+      "build": {}
     }
   }
 }
