--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@quasar/quasar-app-extension-icon-genie": "^1.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "devtron": "^1.4.0",
+    "electron": "^4.0.5",
+    "electron-builder": "^20.44.4",
+    "electron-debug": "^2.1.0",
+    "electron-devtools-installer": "^2.2.4",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0"
