--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -8,17 +8,10 @@
     },
     "build_always": false,
     "__internal": {
-      "dev": {
-        "spa": {
-          "iconHash": "2e525d7615dea2d57f0f5011a7605018"
-        }
-      },
+      "dev": {},
       "build": {
-        "cordova": {
-          "iconHash": "2e525d7615dea2d57f0f5011a7605018",
-          "splashscreenHash": "f80cbfd69c07e9dd7aca1ebb42f8ad69",
-          "splashscreenType": "pure",
-          "backgroundColor": "#000074"
+        "electron": {
+          "iconHash": "2e525d7615dea2d57f0f5011a7605018"
         }
       }
     }
