--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -11,11 +11,23 @@
       "dev": {
         "electron": {
           "iconHash": "2e525d7615dea2d57f0f5011a7605018"
+        },
+        "cordova": {
+          "iconHash": "2e525d7615dea2d57f0f5011a7605018",
+          "splashscreenHash": "f80cbfd69c07e9dd7aca1ebb42f8ad69",
+          "splashscreenType": "pure",
+          "backgroundColor": "#000074"
         }
       },
       "build": {
         "electron": {
           "iconHash": "2e525d7615dea2d57f0f5011a7605018"
+        },
+        "cordova": {
+          "iconHash": "2e525d7615dea2d57f0f5011a7605018",
+          "splashscreenHash": "f80cbfd69c07e9dd7aca1ebb42f8ad69",
+          "splashscreenType": "pure",
+          "backgroundColor": "#000074"
         }
       }
     }
