新增隱私權說明

--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -17,6 +17,9 @@
           "splashscreenHash": "f80cbfd69c07e9dd7aca1ebb42f8ad69",
           "splashscreenType": "pure",
           "backgroundColor": "#000074"
+        },
+        "spa": {
+          "iconHash": "2e525d7615dea2d57f0f5011a7605018"
         }
       },
       "build": {
