--- a/src-cordova/platforms/ios/認照片遊戲/認照片遊戲-Info.plist
+++ b/src-cordova/platforms/ios/認照片遊戲/認照片遊戲-Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.3.0</string>
+	<string>3.3.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3.3.0</string>
+	<string>3.3.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -32,9 +32,9 @@
 	<key>NSCameraUsageDescription</key>
 	<string>need use camara</string>
 	<key>NSMainNibFile</key>
-	<string/>
+	<string></string>
 	<key>NSMainNibFile~ipad</key>
-	<string/>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>user can use thier own photos to play</string>
 	<key>UILaunchStoryboardName</key>
